--- a/index.html
+++ b/index.html
@@ -443,12 +443,12 @@
                 </div>
 
                 <div class="input-group mt-3"> 
-                    <label for="manual-attempts" class="input-label">عدد الألوان (المحاولات):</label>
+                    <label for="manual-attempts" class="input-label">عدد المحاولات:</label>
                     <input type="number" id="manual-attempts" value="25" min="1" max="30" class="sketch-input"> 
                 </div>
                 <div class="checkbox-group">
                     <input type="checkbox" id="manual-infinite-attempts-checkbox">
-                    <label for="manual-infinite-attempts-checkbox">ألوان لا نهائية</label>
+                    <label for="manual-infinite-attempts-checkbox">محاولات لا نهائية</label>
                 </div>
                 <div id="manual-infinite-confirm" class="confirmation-message"></div>
                 <button id="start-manual-game" class="sketch-button mt-2">ابدأ بالكلمة</button> 
@@ -476,7 +476,7 @@
                 </div>
                 <div class="checkbox-group justify-center">
                     <input type="checkbox" id="robot-infinite-attempts-checkbox">
-                    <label for="robot-infinite-attempts-checkbox">ألوان لا نهائية</label>
+                    <label for="robot-infinite-attempts-checkbox">محاولات لا نهائية</label>
                 </div>
                 <div id="robot-infinite-confirm" class="confirmation-message text-center"></div>
                 <p id="loading-message" class="text-xs text-center mb-2 hidden">جاري البحث في الكرّاس...</p> 
@@ -706,7 +706,7 @@
                 manualAttemptsInput.disabled = isInfiniteAttempts;
                 if (isInfiniteAttempts) {
                     manualAttemptsInput.value = ''; 
-                    showConfirmation(manualInfiniteConfirm, "الألوان الآن لا نهائية!");
+                    showConfirmation(manualInfiniteConfirm, "المحاولات الآن لا نهائية!");
                 } else {
                     manualAttemptsInput.value = '25'; 
                     manualInfiniteConfirm.textContent = ''; 
@@ -714,7 +714,7 @@
             } else { 
                 isInfiniteAttempts = robotInfiniteAttemptsCheckbox.checked;
                 if (isInfiniteAttempts) {
-                    showConfirmation(robotInfiniteConfirm, "الألوان الآن لا نهائية!");
+                    showConfirmation(robotInfiniteConfirm, "المحاولات الآن لا نهائية!");
                 } else {
                     robotInfiniteConfirm.textContent = ''; 
                 }
@@ -755,7 +755,7 @@
                 if (!isInfiniteAttempts) {
                     attempts = parseInt(manualAttemptsInput.value);
                     if (isNaN(attempts) || attempts < 1) {
-                        showMessage("طور الرسام: عدد ألوان (محاولات) غير صحيح.", true, true); return;
+                        showMessage("طور يدوي: عدد محاولات غير صحيح.", true, true); return;
                     }
                 } else { attempts = Infinity; } 
             } else { 
@@ -1004,7 +1004,7 @@
                 setTimeout(() => showModal(true, "🎨 اكتملت اللوحة! 🎨"), maxLetterAnimationTime);
             } else if (!isInfiniteAttempts && remainingAttempts <= 0) {
                 gameActive = false; updateNextInputHighlight(); 
-                setTimeout(() => showModal(false, "انتهت الألوان!"), maxLetterAnimationTime);
+                setTimeout(() => showModal(false, "انتهت المحاولات!"), maxLetterAnimationTime);
             } else {
                 currentGuessArray = Array(wordLength).fill('');
                 updateLetterDisplay(); 
@@ -1051,7 +1051,7 @@
 
         function updateAttemptsDisplay() {
             attemptsInfoDisplay.classList.toggle('hidden', isInfiniteAttempts);
-            if (!isInfiniteAttempts) attemptsInfoDisplay.textContent = `الألوان المتبقية: ${remainingAttempts}`;
+            if (!isInfiniteAttempts) attemptsInfoDisplay.textContent = `المحاولات المتبقية: ${remainingAttempts}`;
         }
 
         function showMessage(msg, isError = false, onSetupScreen = false) { 
