--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Word Finder | ابحث عن الكلمة</title>
+    <title>خمن الكلمة | Wordle</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <style>
@@ -83,7 +83,7 @@
 
     <div class="app-container">
         <div id="setup-screen" class="space-y-6">
-            <h1 id="txt-title" class="text-3xl font-bold text-center border-b-2 border-dashed border-main pb-2">ابحث على الكلمة</h1>
+            <h1 id="txt-title" class="text-4xl font-bold text-center border-b-2 border-dashed border-main pb-2">خمن الكلمة</h1>
             
             <div class="flex gap-2">
                 <button id="mode-m" onclick="setMode('manual')" class="flex-1 p-3 rounded-lg border-2 border-main bg-white font-bold">✍️ <span id="txt-m">يدوي</span></button>
@@ -126,8 +126,8 @@
 
     <script>
         const translations = {
-            ar: { title: "ابحث على الكلمة", m: "يدوي", r: "تلقائي", labelWord: "الكلمة السرية:", labelAtt: "عدد المحاولات (0 للانهائية):", robotDesc: "سأختار لك كلمة عشوائية!", btnStart: "بدء اللعب", btnGuess: "تحقق", tries: "المحاولات المتبقية: ", infinite: "وضع المحاولات اللانهائية ♾️", currentTry: "المحاولة رقم: ", win: "مبروك فزت! 🎉", lose: "للأسف خسرت! الكلمة كانت: ", dir: "rtl", font: "font-ar" },
-            en: { title: "Word Finder", m: "Manual", r: "AI Mode", labelWord: "Secret Word:", labelAtt: "Attempts (0 for infinite):", robotDesc: "I'll pick a word for you!", btnStart: "Start Game", btnGuess: "Check", tries: "Tries left: ", infinite: "Infinite Mode ♾️", currentTry: "Attempt number: ", win: "You Won! 🎉", lose: "Game Over! Word was: ", dir: "ltr", font: "font-en" }
+            ar: { title: "خمن الكلمة", m: "يدوي", r: "تلقائي", labelWord: "الكلمة السرية:", labelAtt: "عدد المحاولات (0 للانهائية):", robotDesc: "سأختار لك كلمة عشوائية!", btnStart: "بدء اللعب", btnGuess: "تحقق", tries: "المحاولات المتبقية: ", infinite: "وضع المحاولات اللانهائية ♾️", currentTry: "المحاولة رقم: ", win: "مبروك فزت! 🎉", lose: "للأسف خسرت! الكلمة كانت: ", dir: "rtl", font: "font-ar" },
+            en: { title: "Wordle", m: "Manual", r: "AI Mode", labelWord: "Secret Word:", labelAtt: "Attempts (0 for infinite):", robotDesc: "I'll pick a word for you!", btnStart: "Start Game", btnGuess: "Check", tries: "Tries left: ", infinite: "Infinite Mode ♾️", currentTry: "Attempt number: ", win: "You Won! 🎉", lose: "Game Over! Word was: ", dir: "ltr", font: "font-en" }
         };
 
         let currentUI = 'ar';
